--- a/models/MLPRegressor_v1.ipynb
+++ b/models/MLPRegressor_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.feature_selection import SelectFromModel\n",
-    "from sklearn.metrics import r2_score, mean_absolute_percentage_error, mean_absolute_error\n",
+    "from sklearn.metrics import r2_score, mean_absolute_percentage_error, mean_absolute_error, mean_squared_error\n",
     "from statsmodels.tools.eval_measures import stde\n"
    ]
   },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Lasso</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -86,14 +86,14 @@
        "   remove_time_features  generic_features  remove_atypical_values  \\\n",
        "0                 False              True                   False   \n",
        "\n",
-       "   feature_combination  remove_feature_selection  \\\n",
-       "0                False                     False   \n",
+       "   feature_combination remove_feature_selection  \\\n",
+       "0                False                    Lasso   \n",
        "\n",
        "   remove_invalid_correlated_features  \n",
        "0                               False  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -142,14 +142,8 @@
        "      <th>Discharge</th>\n",
        "      <th>grayMean</th>\n",
        "      <th>graySigma</th>\n",
-       "      <th>entropyMean</th>\n",
-       "      <th>entropySigma</th>\n",
        "      <th>hMean</th>\n",
        "      <th>hSigma</th>\n",
-       "      <th>sMean</th>\n",
-       "      <th>sSigma</th>\n",
-       "      <th>vMean</th>\n",
-       "      <th>vSigma</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -161,14 +155,8 @@
        "      <td>916.0</td>\n",
        "      <td>97.405096</td>\n",
        "      <td>39.623303</td>\n",
-       "      <td>0.203417</td>\n",
-       "      <td>0.979825</td>\n",
        "      <td>105.368375</td>\n",
        "      <td>41.572939</td>\n",
-       "      <td>124.520218</td>\n",
-       "      <td>4.111846</td>\n",
-       "      <td>132.405971</td>\n",
-       "      <td>14.983367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -178,14 +166,8 @@
        "      <td>916.0</td>\n",
        "      <td>104.066757</td>\n",
        "      <td>40.179745</td>\n",
-       "      <td>0.206835</td>\n",
-       "      <td>1.002624</td>\n",
        "      <td>112.399458</td>\n",
        "      <td>41.795584</td>\n",
-       "      <td>124.317679</td>\n",
-       "      <td>4.270429</td>\n",
-       "      <td>133.070221</td>\n",
-       "      <td>15.334166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -195,14 +177,8 @@
        "      <td>873.0</td>\n",
        "      <td>105.636831</td>\n",
        "      <td>40.533218</td>\n",
-       "      <td>0.204756</td>\n",
-       "      <td>0.994246</td>\n",
        "      <td>114.021526</td>\n",
        "      <td>42.145582</td>\n",
-       "      <td>124.304621</td>\n",
-       "      <td>4.310293</td>\n",
-       "      <td>133.294541</td>\n",
-       "      <td>15.502448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -212,14 +188,8 @@
        "      <td>846.0</td>\n",
        "      <td>104.418949</td>\n",
        "      <td>41.752678</td>\n",
-       "      <td>0.202428</td>\n",
-       "      <td>0.983170</td>\n",
        "      <td>112.612830</td>\n",
        "      <td>43.575351</td>\n",
-       "      <td>124.369736</td>\n",
-       "      <td>4.120586</td>\n",
-       "      <td>133.458381</td>\n",
-       "      <td>15.190064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,23 +199,11 @@
        "      <td>846.0</td>\n",
        "      <td>106.763541</td>\n",
        "      <td>44.442097</td>\n",
-       "      <td>0.202661</td>\n",
-       "      <td>0.989625</td>\n",
        "      <td>114.839424</td>\n",
        "      <td>46.302008</td>\n",
-       "      <td>124.283191</td>\n",
-       "      <td>4.088480</td>\n",
-       "      <td>133.573595</td>\n",
-       "      <td>14.801143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -263,14 +221,8 @@
        "      <td>434.0</td>\n",
        "      <td>82.872720</td>\n",
        "      <td>57.702652</td>\n",
-       "      <td>0.221708</td>\n",
-       "      <td>1.076393</td>\n",
        "      <td>87.260572</td>\n",
        "      <td>61.485334</td>\n",
-       "      <td>127.807813</td>\n",
-       "      <td>2.564157</td>\n",
-       "      <td>124.073149</td>\n",
-       "      <td>13.757842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42055</th>\n",
@@ -280,14 +232,8 @@
        "      <td>434.0</td>\n",
        "      <td>89.028383</td>\n",
        "      <td>55.840861</td>\n",
-       "      <td>0.233168</td>\n",
-       "      <td>1.124774</td>\n",
        "      <td>94.175906</td>\n",
        "      <td>59.006132</td>\n",
-       "      <td>127.336000</td>\n",
-       "      <td>2.585121</td>\n",
-       "      <td>124.882812</td>\n",
-       "      <td>13.234735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42056</th>\n",
@@ -297,14 +243,8 @@
        "      <td>434.0</td>\n",
        "      <td>94.722097</td>\n",
        "      <td>54.355753</td>\n",
-       "      <td>0.240722</td>\n",
-       "      <td>1.151833</td>\n",
        "      <td>100.534577</td>\n",
        "      <td>56.921028</td>\n",
-       "      <td>126.958768</td>\n",
-       "      <td>2.774867</td>\n",
-       "      <td>126.145409</td>\n",
-       "      <td>13.408480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42057</th>\n",
@@ -314,14 +254,8 @@
        "      <td>434.0</td>\n",
        "      <td>96.693270</td>\n",
        "      <td>52.787629</td>\n",
-       "      <td>0.244789</td>\n",
-       "      <td>1.171987</td>\n",
        "      <td>102.891159</td>\n",
        "      <td>55.083532</td>\n",
-       "      <td>126.679956</td>\n",
-       "      <td>2.998683</td>\n",
-       "      <td>127.508063</td>\n",
-       "      <td>13.863205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42058</th>\n",
@@ -331,18 +265,12 @@
        "      <td>434.0</td>\n",
        "      <td>98.738399</td>\n",
        "      <td>52.025453</td>\n",
-       "      <td>0.252812</td>\n",
-       "      <td>1.213278</td>\n",
        "      <td>105.292067</td>\n",
        "      <td>53.994155</td>\n",
-       "      <td>126.328075</td>\n",
-       "      <td>3.258103</td>\n",
-       "      <td>128.788256</td>\n",
-       "      <td>14.353808</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>42059 rows × 14 columns</p>\n",
+       "<p>42059 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -359,36 +287,23 @@
        "42057  2019-10-11 12:00:00  2019-10-11T11:59:53   2.54      434.0   96.693270   \n",
        "42058  2019-10-11 12:45:00  2019-10-11T12:59:52   2.54      434.0   98.738399   \n",
        "\n",
-       "       graySigma  entropyMean  entropySigma       hMean     hSigma  \\\n",
-       "0      39.623303     0.203417      0.979825  105.368375  41.572939   \n",
-       "1      40.179745     0.206835      1.002624  112.399458  41.795584   \n",
-       "2      40.533218     0.204756      0.994246  114.021526  42.145582   \n",
-       "3      41.752678     0.202428      0.983170  112.612830  43.575351   \n",
-       "4      44.442097     0.202661      0.989625  114.839424  46.302008   \n",
-       "...          ...          ...           ...         ...        ...   \n",
-       "42054  57.702652     0.221708      1.076393   87.260572  61.485334   \n",
-       "42055  55.840861     0.233168      1.124774   94.175906  59.006132   \n",
-       "42056  54.355753     0.240722      1.151833  100.534577  56.921028   \n",
-       "42057  52.787629     0.244789      1.171987  102.891159  55.083532   \n",
-       "42058  52.025453     0.252812      1.213278  105.292067  53.994155   \n",
+       "       graySigma       hMean     hSigma  \n",
+       "0      39.623303  105.368375  41.572939  \n",
+       "1      40.179745  112.399458  41.795584  \n",
+       "2      40.533218  114.021526  42.145582  \n",
+       "3      41.752678  112.612830  43.575351  \n",
+       "4      44.442097  114.839424  46.302008  \n",
+       "...          ...         ...        ...  \n",
+       "42054  57.702652   87.260572  61.485334  \n",
+       "42055  55.840861   94.175906  59.006132  \n",
+       "42056  54.355753  100.534577  56.921028  \n",
+       "42057  52.787629  102.891159  55.083532  \n",
+       "42058  52.025453  105.292067  53.994155  \n",
        "\n",
-       "            sMean    sSigma       vMean     vSigma  \n",
-       "0      124.520218  4.111846  132.405971  14.983367  \n",
-       "1      124.317679  4.270429  133.070221  15.334166  \n",
-       "2      124.304621  4.310293  133.294541  15.502448  \n",
-       "3      124.369736  4.120586  133.458381  15.190064  \n",
-       "4      124.283191  4.088480  133.573595  14.801143  \n",
-       "...           ...       ...         ...        ...  \n",
-       "42054  127.807813  2.564157  124.073149  13.757842  \n",
-       "42055  127.336000  2.585121  124.882812  13.234735  \n",
-       "42056  126.958768  2.774867  126.145409  13.408480  \n",
-       "42057  126.679956  2.998683  127.508063  13.863205  \n",
-       "42058  126.328075  3.258103  128.788256  14.353808  \n",
-       "\n",
-       "[42059 rows x 14 columns]"
+       "[42059 rows x 8 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,31 +325,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SensorTime      datetime64[ns]\n",
-       "CaptureTime             object\n",
-       "Stage                  float64\n",
-       "Discharge              float64\n",
-       "grayMean               float64\n",
-       "graySigma              float64\n",
-       "entropyMean            float64\n",
-       "entropySigma           float64\n",
-       "hMean                  float64\n",
-       "hSigma                 float64\n",
-       "sMean                  float64\n",
-       "sSigma                 float64\n",
-       "vMean                  float64\n",
-       "vSigma                 float64\n",
-       "Year                     int64\n",
+       "SensorTime     datetime64[ns]\n",
+       "CaptureTime            object\n",
+       "Stage                 float64\n",
+       "Discharge             float64\n",
+       "grayMean              float64\n",
+       "graySigma             float64\n",
+       "hMean                 float64\n",
+       "hSigma                float64\n",
+       "Year                    int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +422,7 @@
     "\n",
     "param_grid = {'clf__hidden_layer_sizes': [(10), (10, 20), (10, 5, 15), (20, 30, 10, 15)], 'clf__alpha': np.arange(1e-3, 0.1, 0.001), 'clf__activation': ['tanh', 'relu']}\n",
     "\n",
-    "clf = RandomizedSearchCV(pipeline, param_distributions=param_grid, n_iter=10, n_jobs=10, verbose=3)"
+    "clf = RandomizedSearchCV(pipeline, param_distributions=param_grid, n_iter=10, n_jobs=10, verbose=3, scoring=\"neg_mean_squared_error\")"
    ]
   },
   {
@@ -527,16 +436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1210847996365673"
+       "-801310.3656676637"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,18 +456,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'clf__hidden_layer_sizes': (10, 5, 15),\n",
-       " 'clf__alpha': 0.031,\n",
-       " 'clf__activation': 'tanh'}"
+       "{'clf__hidden_layer_sizes': (20, 30, 10, 15),\n",
+       " 'clf__alpha': 0.005,\n",
+       " 'clf__activation': 'relu'}"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.16743691545388906"
+       "-425408.1781875586"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,25 +514,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R^2:  0.16743691545388906\n",
-      "mse:  228.4286274755444\n",
-      "rmse:  15.113855480172635\n",
-      "mape:  2.077987165742511e+16\n",
-      "Error estandar:  [4.79669751e-01 5.90914306e+02]\n"
+      "R^2:  -3.0602087176170656\n",
+      "mse:  425408.1781875586\n",
+      "rmse:  461.9982421415349\n",
+      "mae:  395.82005800870127\n",
+      "mape:  9.600147102952742e+16\n",
+      "Error estandar:  [  0.85764752 778.77825615]\n"
      ]
     }
    ],
    "source": [
     "print(\"R^2: \", r2_score(y_test, y_pred))\n",
-    "print(\"mse: \", mean_absolute_error(y_test, y_pred))\n",
-    "print(\"rmse: \", np.sqrt(mean_absolute_error(y_test, y_pred)))\n",
+    "print(\"mse: \", mean_squared_error(y_test, y_pred))\n",
+    "print(\"rmse: \", mean_squared_error(y_test, y_pred, squared=False))\n",
+    "print(\"mae: \", mean_absolute_error(y_test, y_pred))\n",
     "print(\"mape: \", mean_absolute_percentage_error(y_test, y_pred))\n",
     "print(\"Error estandar: \", stde(y_test.squeeze(),\n",
     "      y_pred.squeeze(), ddof=len(X_train.columns) + 1))\n"
@@ -639,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('AI')",
+   "display_name": "Python 3.10.4 ('AI')",
    "language": "python",
    "name": "python3"
   },
@@ -653,12 +564,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8036d000083d9c8e2133564bb58ecd6b29036dbd0e0a50b264afcf6a2fa15ce7"
+    "hash": "d3195bcac7665d94292c51415de587dfe31631e0f2da24bab4176ae761a97102"
    }
   }
  },
