--- a/models/linear_regression_v1.ipynb
+++ b/models/linear_regression_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.feature_selection import SelectFromModel\n",
-    "from sklearn.metrics import r2_score, mean_absolute_percentage_error, mean_absolute_error\n",
+    "from sklearn.metrics import r2_score, mean_absolute_percentage_error, mean_absolute_error, mean_squared_error\n",
     "from statsmodels.tools.eval_measures import stde"
    ]
   },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "0                               False  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[42059 rows x 14 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "array([0.35480337, 0.34735783, 0.35186074, 0.3379347 , 0.35390495])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "Pipeline(steps=[('scaler', StandardScaler()), ('clf', LinearRegression())])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -547,8 +547,9 @@
      "output_type": "stream",
      "text": [
       "R^2:  0.20765578843687355\n",
-      "mse:  289.14866835681914\n",
-      "rmse:  17.004372036532814\n",
+      "mse:  250149.23256003836\n",
+      "rmse:  353.9215663151034\n",
+      "mae:  289.14866835681914\n",
       "mape:  3.631923146666917e+16\n",
       "Error estandar:  [4.53599216e-01 6.20381370e+02]\n"
      ]
@@ -556,16 +557,17 @@
    ],
    "source": [
     "print(\"R^2: \", r2_score(y_test, y_pred))\n",
-    "print(\"mse: \", mean_absolute_error(y_test, y_pred))\n",
-    "print(\"rmse: \", np.sqrt(mean_absolute_error(y_test, y_pred)))\n",
+    "print(\"mse: \", mean_squared_error(y_test, y_pred))\n",
+    "print(\"rmse: \", mean_squared_error(y_test, y_pred, squared=False))\n",
+    "print(\"mae: \", mean_absolute_error(y_test, y_pred))\n",
     "print(\"mape: \", mean_absolute_percentage_error(y_test, y_pred))\n",
     "print(\"Error estandar: \", stde(y_test.squeeze(),\n",
-    "      y_pred.squeeze(), ddof=len(X_train.columns) + 1))"
+    "      y_pred.squeeze(), ddof=len(X_train.columns) + 1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +673,7 @@
        "[13248 rows x 2 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +694,7 @@
        "Text(0, 0.5, 'Standarized residuals stage')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -721,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +732,7 @@
        "Text(0, 0.5, 'Standarized residuals Discharge')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
