--- a/models/cnn_model/cnn_v1.ipynb
+++ b/models/cnn_model/cnn_v1.ipynb
@@ -1731,7 +1731,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('AI')",
+   "display_name": "Python 3.10.6 ('tf-gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -1749,7 +1749,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "8036d000083d9c8e2133564bb58ecd6b29036dbd0e0a50b264afcf6a2fa15ce7"
+    "hash": "79f576286c1276b480d6696ed40f6607e18214e4a2875a618cb5be817ff26007"
    }
   }
  },
