--- a/models/linear_regression_v1.ipynb
+++ b/models/linear_regression_v1.ipynb
@@ -769,7 +769,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('AI')",
+   "display_name": "Python 3.10.6 ('torch-gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -783,12 +783,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3195bcac7665d94292c51415de587dfe31631e0f2da24bab4176ae761a97102"
+    "hash": "bec7ceba99f6edcc3f3dd5decf76daf7b2efce33d0f0e4399daba6796affbf99"
    }
   }
  },
